stretch: fixed nav

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,6 +1,7 @@
 // Home Content
 
 .home {
+  margin-top: 12rem;
   .intro {
     img {
       width: 100%;
@@ -105,5 +106,9 @@
         margin: 0;
       }
     }
+  }
+
+  .sign-up {
+    .sign-up-styles();
   }
 } // home
