--- a/less/navigation.less
+++ b/less/navigation.less
@@ -3,10 +3,16 @@
 nav {
   max-width: 800px;
   width: 100%;
-  margin: 0 auto;
+  height: 11rem;
+  position: fixed;
+  background-color: white;
+  margin: -12rem auto 0;
+  left: 0;
+  right: 0;
   display: flex;
   flex-direction: column;
   padding: 1.5rem;
+  box-shadow: 0px 10px 46px 0px rgba(0, 0, 0, 0.75);
   h1 {
     font-size: 4rem;
     align-self: center;
